--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ h6 {
 .education-entry,
 .work-entry,
 .project-entry {
-  padding: 0 5%;
+  padding: 5 5%;
 }
 
 h1 {
@@ -76,7 +76,7 @@ h5 {
   color: #999;
   line-height: 16px;
   float: right;
-
+  width: 19%;
 }
 
 p {
@@ -89,14 +89,15 @@ a {
   color: #1199c3;
   text-decoration: none;
   margin-top: 10px;
-  display: block;
-}
+  padding-left: : 5px;
+display: table-cell;}
 
 .welcome-message {
   font-style: italic;
   font-size: 18px;
   color: #f3f3f3;
   line-height: 28px;
+  padding: 1%;
 }
 
 #skills-h3 {
@@ -118,9 +119,9 @@ a {
 }
 
 .gray {
-  background-color: #f3f3f3;
-  padding-bottom: 10px;
-  clear: both;
+    background-color: #f3f3f3;
+    padding-bottom: 1%;
+    clear: both;
 }
 
 .dark-gray {
@@ -172,6 +173,7 @@ ul{
 
 img {
   padding: 10px;
+  width: 10%;
 }
 
 span {
