--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ h6 {
 
 .clear-fix {
   overflow: auto;
+width: 60%;
 }
 
 .education-entry,
@@ -57,8 +58,7 @@ h2,
 h3,
 h4,
 h5 {
-  padding: 10px 5%;
-
+      padding: 0;
 }
 
 
@@ -122,10 +122,12 @@ display: table-cell;}
     background-color: #f3f3f3;
     padding-bottom: 1%;
     clear: both;
+width: 60%;
 }
 
 .dark-gray {
   background-color: #4a4a4a;
+width: 60%;
 }
 li {
 display: block;
@@ -153,15 +155,26 @@ display: block;
 }
 
 
-
-.center-content {
-  padding: 2.5% 5%;
-
-}
-
 .welcome-message{
   display:block;
 }
+.center-content {
+  padding: 1.5% 7%;
+
+}
+#workExperience {
+  padding: 1.5% 7%;
+
+}
+#projects {
+  padding: 1.5% 7%;
+
+}
+#education {
+  padding: 1.5% 7%;
+
+}
+
 ul{
   list-style-type: none;
 }
@@ -190,6 +203,7 @@ span {
 
 #lets-connect {
   text-align: center;
+padding: 1.5% 7%;
 }
 
 /* Media queries to handle various device widths */
@@ -226,8 +240,9 @@ span {
 
 #mapDiv {
   height: 400px;
-  width: 100%;
+  width: 60%;
   padding-bottom: 5%;
+padding: 1.5% 7%;
 }
 
 @media only screen and (min-width: 750px) {
