--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,4 @@
-body,
-div,
-ul,
-li,
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+body, div, ul, li, p, h1, h2, h3, h4, h5, h6 {
   padding: 0;
   margin: 0;
   font-family: "Roboto", sans-serif;
@@ -16,12 +6,10 @@ h6 {
 
 .clear-fix {
   overflow: auto;
-width: 60%;
+  width: 60%;
 }
 
-.education-entry,
-.work-entry,
-.project-entry {
+.education-entry, .work-entry, .project-entry {
   padding: 5 5%;
 }
 
@@ -54,13 +42,9 @@ h4 {
   line-height: 17px;
 }
 
-h2,
-h3,
-h4,
-h5 {
-      padding: 0;
+h2, h3, h4, h5 {
+  padding: 0;
 }
-
 
 .date-text {
   font-style: italic;
@@ -90,7 +74,8 @@ a {
   text-decoration: none;
   margin-top: 10px;
   padding-left: : 5px;
-display: table-cell;}
+  display: table-cell;
+}
 
 .welcome-message {
   font-style: italic;
@@ -119,21 +104,24 @@ display: table-cell;}
 }
 
 .gray {
-    background-color: #f3f3f3;
-    padding-bottom: 1%;
-    clear: both;
-width: 60%;
+  background-color: #f3f3f3;
+  padding-bottom: 1%;
+  clear: both;
+  width: 60%;
 }
 
 .dark-gray {
   background-color: #4a4a4a;
-width: 60%;
-}
-li {
-display: block;
+  width: 60%;
 }
 
+li {
+  display: block;
+}
+
+
 /* TODO: Replace with image later */
+
 #header {
   background-color: #484848;
 }
@@ -154,37 +142,38 @@ display: block;
   padding: 10px;
 }
 
-
-.welcome-message{
-  display:block;
+.welcome-message {
+  display: block;
 }
+
 .center-content {
   padding: 1.5% 7%;
-
 }
+
 #workExperience {
   padding: 1.5% 7%;
-
 }
+
 #projects {
   padding: 1.5% 7%;
-
 }
+
 #education {
   padding: 1.5% 7%;
-
 }
 
-ul{
+ul {
   list-style-type: none;
 }
 
-#skills{
-    display: block;
+#skills {
+  display: block;
 }
-#info{
-    display: inline;
+
+#info {
+  display: inline;
 }
+
 .biopic {
   float: left;
   padding: 10px;
@@ -203,8 +192,9 @@ span {
 
 #lets-connect {
   text-align: center;
-padding: 1.5% 7%;
+  padding: 1.5% 7%;
 }
+
 
 /* Media queries to handle various device widths */
 
@@ -242,12 +232,11 @@ padding: 1.5% 7%;
   height: 400px;
   width: 60%;
   padding-bottom: 5%;
-padding: 1.5% 7%;
+  padding: 1.5% 7%;
 }
 
 @media only screen and (min-width: 750px) {
-  #skills-h3,
-  .biopic {
+  #skills-h3, .biopic {
     display: block;
   }
 }
